--- a/index-1.html
+++ b/index-1.html
@@ -7,6 +7,7 @@
     <script src="js/pixi.min.js"></script>
     <script>
         let app;
+        let player;
         window.onload = function() {
             keys = {};
             app = new PIXI.Application({
@@ -14,7 +15,13 @@
                 height: 600,
                 backgroundColor: 0x1099bb
             });
-            document.body.appendChild(app.view);
+            document.querySelector("#gameDiv").appendChild(app.view);
+            
+            let bg = new PIXI.Graphics();
+            bg.beginFill(0x000000, 0.01);
+            bg.drawRect(0, 0, app.view.width, app.view.height);
+            bg.endFill();
+            app.stage.addChild(bg);
 
             player = PIXI.Sprite.from('images/player.png');
             player.anchor.set(0.5);
@@ -33,6 +40,6 @@
     </script>
 </head>
 <body>
-    <div id="keys"></div>
+    <div id="gameDiv"></div>
 </body>
 </html>
