--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Following this example</title>
+    <title>Pixi.js Tutorials - Quick Tips to Get You Started Fast</title>
 </head>
 <body>
     <div><a href="index-0.html">Pixi.js: Basic Project Setup</a></div>
